--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <title>First</title>
     <style>
       img {
-        width: 100px;
-        border-radius: 50px;
+        width: 150px;
+        border-radius: 75px;
         float: left;
         margin-right: 10px;
       }
       p.username {
         font-weight: bold;
+        font-size:40px;
+      }
+      p.tweet {
+        font-size:30px;
       }
     </style>
   </head>
   <body>
     <img src="green.jpeg" alt="Image of a green screen">
     <p class="username" style="font-family:verdana">Ezekiel</p>
-    <p class="tweet" style="font-family:verdana">Hello World!</p>
-    <a href="https://google.com">Google</a>
+    <p class="tweet" style="font-family:verdana">Xavier is short!</p>
   </body>
 </html>
