--- a/First.html
+++ b/First.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>First Site</title>
+        
         <style>
-            h1 {
-                font-size:75px;
-                text-align:center;
-            }
-            a.link {
-                font-size:50px;
-                text-align:center;
-                display:block;
+            img {
+                width:1000px;
             }
         </style>
     </head>
     <body>
-        <h1>Home Page</h1>
-        <a class="link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Google</a>
+        <img src="rickroll.gif" alt="Rick roll gif">
     </body>
 </html>
