--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         </style>
     </head>
     <body>
-        <img src="rickroll.gif" alt="Rick roll gif">
+        <img src="rickroll.gif" alt="Rick roll gif"></img>
     </body>
 </html>
