--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         
         <style>
-            img {
+            a {
                 width:1000px;
             }
         </style>
     </head>
     <body>
-        <img src="rickroll.gif" alt="Rick roll gif"></img>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Google</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Google</a>
     </body>
 </html>
