--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Google</a>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Google</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="align=center">Google</a>
     </body>
 </html>
